--- a/type2/index.html
+++ b/type2/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="https://chromexalt.github.io/No.8/type2/style.css">
+<html>
+	<head>
 		<title>Liquid Layout</title>
+		<style type="text/css">
 			* {
 				font-family: Arial, Verdana, sans-serif;
 				color: #665544;
