--- a/type2/index.html
+++ b/type2/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" type="text/css" href="https://chromexalt.github.io/weltmacht2022/type2/style.css">
 	<head>
 		<title>Liquid Layout</title>
 		<style type="text/css">
