--- a/type2/index.html
+++ b/type2/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://chromexalt.github.io/weltmacht2022/type2/style.css">
-	<head>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/avara" type="text/css"/>
 	<title>Liquid Layout</title>
 		
 </head>
